using UnityEngine;
using UnityEngine.AI;

public enum EnemyGender { Male, Female };
public enum EnemyType { StandingDuty, Patrollable };
public enum EnemyState { Idle, Patrol, Chasing };

/*
* 1. Standing Duty Enemy NPC State Machine
* Idle -> for a standing NPC only -> Chasing -> Back to starting position -> Idle
* ----------------------------------------------------------
* 2. Petrollable Enemy NPC State Machine
* Patrol -> Player Detected -> 
* Chasing -> Player sight lost (after a few seconds) -> 
* Suspicious (inspecting) for a few seconds -> Return to patrol
*/
/*
* 1. ç«‹ã£ã¦ã„ã‚‹æ•µNPCã®ã‚¹ãƒ†ãƒ¼ãƒˆãƒã‚·ãƒ³
* ã‚¢ã‚¤ãƒ‰ãƒ« -> ç«‹ã£ã¦ã„ã‚‹NPCå°‚ç”¨ -> è¿½è·¡ -> åˆæœŸä½ç½®ã«æˆ»ã‚‹ -> ã‚¢ã‚¤ãƒ‰ãƒ«
* ----------------------------------------------------------
* 2. æ“ä½œå¯èƒ½ãªæ•µNPCã®ã‚¹ãƒ†ãƒ¼ãƒˆãƒã‚·ãƒ³
* ãƒ‘ãƒˆãƒ­ãƒ¼ãƒ« -> ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼æ¤œå‡º ->
* è¿½è·¡ -> ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ã®è¦–ç·šã‚’å¤±ã†ï¼ˆæ•°ç§’å¾Œï¼‰ ->
* ç–‘ã‚ã—ã„ï¼ˆèª¿æŸ»ä¸­ï¼‰æ•°ç§’é–“ -> ãƒ‘ãƒˆãƒ­ãƒ¼ãƒ«ã«æˆ»ã‚‹
*/
[RequireComponent(typeof(NavMeshAgent), typeof(Animator), typeof(EnemyAttack))]
public class EnemyController : MonoBehaviour
{
    [Header("General Settings")]
    [SerializeField] EnemyGender enemyGender = EnemyGender.Male;
    [SerializeField] EnemyType enemyType = EnemyType.Patrollable;
    [SerializeField] EnemyState currentState = EnemyState.Patrol;

    [Header("Vision Settings")]
    [SerializeField] Transform eyePosition; // eye position of the enemy (æ•µã®ç›®ã®ä½ç½®)
    [SerializeField] float viewRadius = 10f;
    [Range(0f, 360f)][SerializeField] float viewAngle = 90f;
    [SerializeField] LayerMask obstacleMask;      // like wall, rocks, etc (å£ã‚„å²©ãªã©)

    [Header("Detection Settings")]
    [SerializeField] float detectionTime = 2f;
    private float currentDetectTimer = 0f;

    [Header("Movement Settings")]
    [SerializeField] float walkSpeed = 3f;       // enemy walk speed  -  this will override navmash agent's default speed (æ•µã®ç§»å‹•é€Ÿåº¦ - ã“ã‚Œã¯ãƒŠãƒ“ãƒ¡ãƒƒã‚·ãƒ¥ã‚¨ãƒ¼ã‚¸ã‚§ãƒ³ãƒˆã®ãƒ‡ãƒ•ã‚©ãƒ«ãƒˆé€Ÿåº¦ã‚’ä¸Šæ›¸ãã—ã¾ã™)
    [SerializeField] float chaseSpeed = 5f;       // speed to chase player (ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ã‚’è¿½ã„ã‹ã‘ã‚‹é€Ÿåº¦)
    [SerializeField] float attackDistance = 6.5f;   // distance to kick player (ã‚­ãƒƒã‚¯ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ã¾ã§ã®è·é›¢)

    // time to lose player if player is not in sight (ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ãŒè¦–ç•Œã«ãªã„å ´åˆã¯ã€ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ã‚’å¤±ã†æ™‚é–“ã§ã™ã€‚)
    [SerializeField] float losePlayerTime = 3f;
    private float losePlayerTimer = 0f;

    // suspicious timer -> timer to search for player (ç–‘ã‚ã—ã„ã‚¿ã‚¤ãƒãƒ¼ -> ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ã‚’æ¢ã™ãŸã‚ã®ã‚¿ã‚¤ãƒãƒ¼)
    [SerializeField] float inspectionTime = 3f;
    private float inspectionTimer = 0f;

    private Transform player;
    private NavMeshAgent agent;
    private Animator animator;
    private EnemyAttack enemyAttack;

    // for standing duty npc, to go back to its original position after chasing the player (ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ã‚’è¿½ã„ã‹ã‘ãŸå¾Œã€å…ƒã®ä½ç½®ã«æˆ»ã‚‹ãŸã‚ã®å¾…æ©Ÿä»»å‹™NPCã®ãŸã‚ã«)
    private Vector3 startingPosition;
    private AudioManager audioManager;

    // animator variables (ã‚¢ãƒ‹ãƒ¡ãƒ¼ã‚¿ãƒ¼å¤‰æ•°)
    const string ANIM_RUNNING = "isRunning";
    const string ANIM_KICKING = "isKicking";
    const string ANIM_INSPECTING = "isInspecting";

    public EnemyState CurrentState => currentState;
    public EnemyType CurrentEnemyType => enemyType;

    void OnEnable()
    {
        PlayerSystem.OnPlayerDeathSequence += TriggerLose;
    }

    void OnDisable()
    {
        PlayerSystem.OnPlayerDeathSequence -= TriggerLose;
    }

    void Start()
    {
        player = FindAnyObjectByType<PlayerController>().gameObject.transform;
        agent = GetComponent<NavMeshAgent>();
        animator = GetComponent<Animator>();
        enemyAttack = GetComponent<EnemyAttack>();

        audioManager = AudioManager.Instance;

        startingPosition = transform.position;

        // apply difficulty settings (é›£æ˜“åº¦è¨­å®šã‚’é©ç”¨ã™ã‚‹)
        // this will override some variables as per difficulty, irrespective of what is set in inspector (ã“ã‚Œã¯ã€ã‚¤ãƒ³ã‚¹ãƒšã‚¯ã‚¿ãƒ¼ã§è¨­å®šã•ã‚Œã¦ã„ã‚‹å†…å®¹ã«é–¢ä¿‚ãªãã€é›£æ˜“åº¦ã«å¿œã˜ã¦ã„ãã¤ã‹ã®å¤‰æ•°ã‚’ä¸Šæ›¸ãã—ã¾ã™ã€‚)
        ApplyDifficultySettings();
    }

    void Update()
    {
        switch (currentState)
        {
            case EnemyState.Idle:
                IdleBehaviour();
                break;
            case EnemyState.Patrol:
                PatrolBehaviour();
                break;
            case EnemyState.Chasing:
                ChasingBehaviour();
                break;
        }
    }

    void IdleBehaviour()
    {
        // go back to starting position (é–‹å§‹ä½ç½®ã«æˆ»ã‚‹)
        if (transform.position != startingPosition) agent.SetDestination(startingPosition);
        PatrolBehaviour();
    }

    /// <summary>
    /// Patrol behaviour for the patrollable enemy.
    /// This function makes the enemy patrol and set to chasing state if it sees the player.
    /// ãƒ‘ãƒˆãƒ­ãƒ¼ãƒ«å¯èƒ½ãªæ•µã®ãŸã‚ã®ãƒ‘ãƒˆãƒ­ãƒ¼ãƒ«è¡Œå‹•ã€‚
    /// ã“ã®æ©Ÿèƒ½ã¯ã€æ•µãŒå·¡å›ã—ã€ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ã‚’è¦‹ã‚‹ã¨è¿½è·¡çŠ¶æ…‹ã«è¨­å®šã—ã¾ã™ã€‚
    /// </summary>
    void PatrolBehaviour()
    {
        if (player == null) return;

        agent.speed = walkSpeed;

        if (IsPlayerInSight())
        {
            currentDetectTimer += Time.deltaTime;

            if (currentDetectTimer >= detectionTime)
            {
                // sfx
                audioManager.PlayPlayerSpottedSFX(enemyGender);

                // chasing player
                currentState = EnemyState.Chasing;
                agent.SetDestination(player.position);

                Debug.Log("â— PLAYER DETECTED! CHASING...");
            }
        }
        else
        {
            currentDetectTimer -= Time.deltaTime;
            currentDetectTimer = Mathf.Clamp(currentDetectTimer, 0f, detectionTime);
        }
    }

    /// <summary>
    /// Chasing behaviour for the enemy.
    /// This function makes the enemy chase the player and play the running animation.
    /// If the player is in sight, the enemy will attack (kick) the player if it is close enough.
    /// If the player is not in sight, the enemy will enter a suspicious (inspecting) state after a cooldown timer.
    /// æ•µã‚’è¿½ã„ã‹ã‘ã‚‹è¡Œå‹•ã€‚
    /// ã“ã®æ©Ÿèƒ½ã¯ã€æ•µãŒãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ã‚’è¿½ã„ã‹ã‘ã€èµ°ã‚‹ã‚¢ãƒ‹ãƒ¡ãƒ¼ã‚·ãƒ§ãƒ³ã‚’å†ç”Ÿã—ã¾ã™ã€‚
    /// ãƒ•ã‚šãƒ¬ã‚¤ãƒ¤ãƒ¼ãŒè¦–ç•Œå†…ã«ã„ã‚‹å ´åˆã€æ•µãŒè¿‘ãã«ã„ã‚‹å ´åˆã¯ã€ãƒ•ã‚šãƒ¬ã‚¤ãƒ¤ãƒ¼ã‚’æ”»æ’ƒã—ã¾ã™ã€‚
    /// ãƒ•ã‚šãƒ¬ã‚¤ãƒ¤ãƒ¼ãŒè¦–ç•Œå†…ã«ã„ãªã„å ´åˆã€æ•µãŒæ•°ç§’å¾Œã«ç–‘ã‚ã—ã„(èª¿æŸ»ä¸­)çŠ¶æ…‹ã«å…¥ã‚Šã¾ã™ã€‚
    /// </summary>
    void ChasingBehaviour()
    {
        if (enemyAttack.IsKicking) return;

        agent.speed = chaseSpeed;
        agent.SetDestination(player.position);      // follow player
        animator.SetBool(ANIM_RUNNING, true);        // set running animation

        // stopping bgm audios
        audioManager.StopBGM();

        if (IsPlayerInSight())
        {
            // slash the player if close enough
            float distToPlayer = Vector3.Distance(transform.position, player.position);

            // ********** Attack **********
            // attack if player is close and player is not above the enemy's head
            if (distToPlayer <= attackDistance && player.position.y < 1.5f && !PlayerController.Instance.WasKickBefore)
            {
                // slow motion sfx
                audioManager.PlaySlowMotionSFX();

                // stopping agent and attack
                agent.isStopped = true;
                enemyAttack.Attack(ANIM_KICKING);
                PlayerController.Instance.SetWasKickedBefore();

                Debug.Log("ğŸ—¡ï¸ Attacking player");
            }
            else agent.isStopped = false;

            // reset timer
            losePlayerTimer = losePlayerTime;
            inspectionTimer = inspectionTime;
        }
        else
        {
            // chasing cooldown timer
            losePlayerTimer -= Time.deltaTime;

            if (losePlayerTimer < 0)
            {
                // stopping and playing suspicious (inspecting) animation
                agent.isStopped = true;
                animator.SetBool(ANIM_RUNNING, false);        // set running animation
                animator.SetBool(ANIM_INSPECTING, true);        // set inspecting animation
                Debug.Log("ğŸ” Inspecting the place");

                // suspicious (inspecting) cooldown timer
                inspectionTimer -= Time.deltaTime;

                // inspection finished and player lost, return to patrol...
                if (inspectionTimer <= 0)
                {
                    // playing bgm audios
                    audioManager.PlayBGM();

                    agent.isStopped = false;
                    currentState = enemyType == EnemyType.StandingDuty ? EnemyState.Idle : EnemyState.Patrol;
                    animator.SetBool(ANIM_INSPECTING, false);        // set inspecting animation

                    Debug.Log("ğŸ‘ï¸ Lost player. Returning to patrol.");
                }
            }
        }
    }

    /// <summary>
    /// Checks whether the player is in the enemy's sight.
    /// This does the following checks:
    /// 1. Is the player in the view radius?
    /// 2. Is the player in the view angle?
    /// 3. Is there an obstacle in the way (raycast check)?
    /// If any of these conditions are false, the player is not in sight
    /// ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ãŒæ•µã®è¦–ç•Œã«ã„ã‚‹ã‹ã©ã†ã‹ã‚’ç¢ºèªã—ã¾ã™ã€‚
    /// ã“ã‚Œã¯æ¬¡ã®ãƒã‚§ãƒƒã‚¯ã‚’è¡Œã„ã¾ã™:
    /// 1. ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ã¯è¦–é‡åŠå¾„å†…ã«ã„ã‚‹ã‹ã©ã†ã‹ï¼Ÿ
    /// 2. ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ã¯è¦–é‡è§’åº¦å†…ã«ã„ã‚‹ã‹ã©ã†ã‹ï¼Ÿ
    /// 3. è¦–é‡ã®é–“ã«éšœå®³ç‰©ãŒã‚ã‚‹ã‹ã©ã†ã‹ï¼ˆãƒ¬ã‚¤ã‚­ãƒ£ã‚¹ãƒˆãƒã‚§ãƒƒã‚¯ï¼‰ï¼Ÿ
    /// ã„ã™ã‚™ã‚Œã‹ã®æ¡ä»¶ãŒå½ã®å ´åˆã€ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ã¯è¦–ç•Œã«ã„ãªã„
    /// </summary>
    bool IsPlayerInSight()
    {
        Vector3 enemyPosition = eyePosition ? eyePosition.position : transform.position + Vector3.up * 1.5f;
        Vector3 dirToPlayer = (player.position - enemyPosition).normalized;
        float distToPlayer = Vector3.Distance(enemyPosition, player.position);

        if (distToPlayer > viewRadius) return false;

        float angleToPlayer = Vector3.Angle(transform.forward, dirToPlayer);
        if (angleToPlayer > viewAngle / 2f) return false;

        // this obstacle mask is so that if player is hiding behind any obstacle this raycast should be blocked by the obstacle
        // ã“ã®éšœå®³ç‰©ãƒã‚¹ã‚¯ã¯ã€ãƒ—ãƒ¬ã‚¤ãƒ¤ãƒ¼ãŒéšœå®³ç‰©ã®å¾Œã‚ã«éš ã‚Œã¦ã„ã‚‹å ´åˆã€ã“ã®ãƒ¬ã‚¤ã‚­ãƒ£ã‚¹ãƒˆãŒéšœå®³ç‰©ã«ã‚ˆã£ã¦ãƒ–ãƒ­ãƒƒã‚¯ã•ã‚Œã‚‹ã‚ˆã†ã«ã™ã‚‹ãŸã‚ã®ã‚‚ã®ã§ã™ã€‚
        if (Physics.Raycast(enemyPosition, dirToPlayer, distToPlayer, obstacleMask)) return false;

        return true;
    }

    // Disables this script after triggering the lose condition.
    // æ•µã®loseæ¡ä»¶ã‚’ç™ºç”Ÿã—ãŸå¾Œã«ã“ã®ã‚¹ã‚¯ãƒªãƒ—ãƒˆã‚’ç„¡åŠ¹åŒ–ã—ã¾ã™ã€‚
    void TriggerLose()
    {
        // stop all audios
        // audioManager.StopBGM();

        enabled = false;
    }

    /// <summary>
    /// Applies difficulty settings from the current <see cref="DifficultySettings"/>,
    /// overriding the fields in this class with the values from the difficulty settings.
    /// <see cref="DifficultySettings"/>ã‹ã‚‰ç¾åœ¨ã®é›£æ˜“åº¦è¨­å®šã‚’é©ç”¨ã—ã€ã“ã®ã‚¯ãƒ©ã‚¹ã®ãƒ•ã‚£ãƒ¼ãƒ«ãƒ‰ã‚’é›£æ˜“åº¦è¨­å®šã‹ã‚‰ã®å€¤ã«ä¸Šæ›¸ãã—ã¾ã™ã€‚
    /// </summary>
    void ApplyDifficultySettings()
    {
        DifficultySettings settings = DifficultyManager.Instance?.CurrentSettings;
        if (settings == null) return;        // happens only when testing in editor while directing entering to level without going through main menu

        viewRadius = settings.viewRadius;
        detectionTime = settings.detectionTime;
        losePlayerTime = settings.losePlayerTime;
        chaseSpeed = settings.enemyChaseSpeed;
    }

    // chasing player if player hits the enemy (called in player collider controller script)
    // ãƒ•ã‚šãƒ¬ã‚¤ãƒ¤ãƒ¼ãŒæ•µã«ãƒ’ãƒƒãƒˆã—ãŸå ´åˆã€è¿½è·¡ã™ã‚‹ï¼ˆplayer collider controllerã‚¹ã‚¯ãƒªãƒ—ãƒˆã§å‘¼ã³å‡ºã•ã‚Œã¾ã™ã€‚)
    public void ChasePlayerAfterHit()
    {
        currentState = EnemyState.Chasing;
        agent.SetDestination(player.position);
        transform.LookAt(player.position);
        agent.updateRotation = true;
    }

    // for visual debugging purpose only
    // è¦–è¦šçš„ãƒ‡ãƒãƒƒã‚°ç›®çš„ã®ã¿
    void OnDrawGizmosSelected()
    {
        Gizmos.color = Color.red;
        Gizmos.DrawWireSphere(transform.position, viewRadius);

        Vector3 leftBoundary = DirFromAngle(-viewAngle / 2, false);
        Vector3 rightBoundary = DirFromAngle(viewAngle / 2, false);

        Gizmos.color = Color.yellow;
        Gizmos.DrawLine(transform.position, transform.position + leftBoundary * viewRadius);
        Gizmos.DrawLine(transform.position, transform.position + rightBoundary * viewRadius);
    }

    // for visual debugging purpose only
    // è¦–è¦šçš„ãƒ‡ãƒãƒƒã‚°ç›®çš„ã®ã¿
    public Vector3 DirFromAngle(float angle, bool global)
    {
        if (!global) angle += transform.eulerAngles.y;
        return new Vector3(Mathf.Sin(angle * Mathf.Deg2Rad), 0, Mathf.Cos(angle * Mathf.Deg2Rad));
    }
}